// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`begins at text node zero, ends at end of block 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "a",
    "focusOffset": 19,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`begins within text node, ends at end of block 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 5,
    "focusKey": "a",
    "focusOffset": 19,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`contains an entire leaf 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "c",
    "anchorOffset": 0,
    "focusKey": "c",
    "focusOffset": 7,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`does the crazy stuff described above 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "c",
    "focusOffset": 12,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`extends from head of one node to end of another 1`] = `
Object {
  "needsRecovery": false,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "b",
    "focusOffset": 7,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`from start of one block to end of other block 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "c",
    "focusOffset": 7,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`from start of one block to start of another 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "c",
    "focusOffset": 0,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`goes from end of one to end of other block 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 19,
    "focusKey": "c",
    "focusOffset": 12,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`goes from start of one block to end of other block 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "c",
    "focusOffset": 12,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`goes from start of one block to start of other 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "c",
    "focusOffset": 0,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`goes from within one block to within another block 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 19,
    "focusKey": "c",
    "focusOffset": 7,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`is a reversed selection across multiple text nodes 1`] = `
Object {
  "needsRecovery": false,
  "selectionState": Immutable.Record {
    "anchorKey": "c",
    "anchorOffset": 4,
    "focusKey": "a",
    "focusOffset": 6,
    "isBackward": true,
    "hasFocus": false,
  },
}
`;

exports[`is a reversed text-to-leaf selection 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "c",
    "anchorOffset": 0,
    "focusKey": "a",
    "focusOffset": 4,
    "isBackward": true,
    "hasFocus": false,
  },
}
`;

exports[`is a reversed text-to-leaf-child selection 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "c",
    "anchorOffset": 0,
    "focusKey": "a",
    "focusOffset": 4,
    "isBackward": true,
    "hasFocus": false,
  },
}
`;

exports[`is collapsed at end at single block 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 19,
    "focusKey": "a",
    "focusOffset": 19,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`is collapsed at end of single span 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 10,
    "focusKey": "a",
    "focusOffset": 10,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`is collapsed at end with full selection 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "c",
    "anchorOffset": 12,
    "focusKey": "c",
    "focusOffset": 12,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`is collapsed at start at single block 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "a",
    "focusOffset": 0,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`is collapsed at start of single span 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "a",
    "focusOffset": 0,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`is collapsed at start with full selection 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "a",
    "focusOffset": 0,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`is collapsed at the end of a child 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 19,
    "focusKey": "a",
    "focusOffset": 19,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`is collapsed at the start of the contents 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "a",
    "focusOffset": 0,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`is completely selected 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "c",
    "focusOffset": 12,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`is contains multiple children 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "c",
    "focusOffset": 12,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`is entirely selected 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "a",
    "focusOffset": 19,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`is reversed from above 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "c",
    "anchorOffset": 12,
    "focusKey": "a",
    "focusOffset": 0,
    "isBackward": true,
    "hasFocus": false,
  },
}
`;

exports[`is reversed from the first case 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 19,
    "focusKey": "a",
    "focusOffset": 0,
    "isBackward": true,
    "hasFocus": false,
  },
}
`;

exports[`is reversed on entire leaf 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "c",
    "anchorOffset": 7,
    "focusKey": "c",
    "focusOffset": 0,
    "isBackward": true,
    "hasFocus": false,
  },
}
`;

exports[`is the same as above but reversed 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "c",
    "anchorOffset": 7,
    "focusKey": "a",
    "focusOffset": 19,
    "isBackward": true,
    "hasFocus": false,
  },
}
`;

exports[`must find offsets for non-collapsed selection 1`] = `
Object {
  "needsRecovery": false,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 1,
    "focusKey": "a",
    "focusOffset": 6,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`must find offsets for reversed selection 1`] = `
Object {
  "needsRecovery": false,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 6,
    "focusKey": "a",
    "focusOffset": 1,
    "isBackward": true,
    "hasFocus": false,
  },
}
`;

exports[`must find offsets for selection on entire text node 1`] = `
Object {
  "needsRecovery": false,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "a",
    "focusOffset": 10,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`must find offsets when collapsed at end 1`] = `
Object {
  "needsRecovery": false,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 10,
    "focusKey": "a",
    "focusOffset": 10,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`must find offsets when collapsed at start 1`] = `
Object {
  "needsRecovery": false,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "a",
    "focusOffset": 0,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`occupies a single child of the contents 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "a",
    "focusOffset": 19,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`reversed leaf to leaf 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "c",
    "anchorOffset": 7,
    "focusKey": "a",
    "focusOffset": 0,
    "isBackward": true,
    "hasFocus": false,
  },
}
`;

exports[`starts at head of one node and ends at head of another 1`] = `
Object {
  "needsRecovery": false,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "c",
    "focusOffset": 0,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`starts at head of text node, ends at end of leaf child 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "c",
    "focusOffset": 7,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`starts at head of text node, ends at end of leaf span 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "c",
    "focusOffset": 7,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`starts at head of text node, ends at head of leaf child 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "c",
    "focusOffset": 0,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`starts at head of text node, ends at head of leaf span 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 0,
    "focusKey": "c",
    "focusOffset": 0,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`starts within one text node and ends within another block 1`] = `
Object {
  "needsRecovery": false,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 4,
    "focusKey": "c",
    "focusOffset": 6,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`starts within text node, ends at end of leaf child 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 4,
    "focusKey": "c",
    "focusOffset": 7,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`starts within text node, ends at end of leaf span 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 4,
    "focusKey": "c",
    "focusOffset": 7,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`starts within text node, ends at start of leaf child 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 4,
    "focusKey": "c",
    "focusOffset": 0,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;

exports[`starts within text node, ends at start of leaf span 1`] = `
Object {
  "needsRecovery": true,
  "selectionState": Immutable.Record {
    "anchorKey": "a",
    "anchorOffset": 4,
    "focusKey": "c",
    "focusOffset": 0,
    "isBackward": false,
    "hasFocus": false,
  },
}
`;
